# week-02-python-patterns

asyncio/: README.md  main.py  pyproject.toml
asyncio/app/: benchmark.py  config.py  models.py
asyncio/app/clients/: groq.py  openai.py  openrouter.py
pydantic-validation/: README.md  main.py  pyproject.toml
pydantic-validation/app/models/: api_response.py  chat_message.py  invoice.py  receipt.py  user_profile.py
