[project]
name = "day-02-asyncio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
]
